# PduDisplay

./: CMakeLists.txt  README.md  partition.csv  sdkconfig  sdkconfig.old  sdkconfig_
ezz/: ezz.eez-project  ezz.eez-project-ui-state
icons/: icons8_adjust_48_facebook.c  icons8_adjust_48_ube.c  icons8_alarm_48_light_coral.c  icons8_arrowdown_36_black.c  icons8_arrowleft_36_black.c  icons8_arrowright_36_black.c  icons8_arrowup_36_black.c  icons8_dashboard_48_maya_blue.c  icons8_electrical_48_ube.c  (+10 more)
main/: About.cpp  About.h  CMakeLists.txt  Conf.cpp  Conf.h  DataList.cpp  DataList.h  Display.cpp  Display.h  ModbusControls.cpp  ModbusControls.h  Windows.cpp  Windows.h  idf_component.yml  main.cpp
main/ModbusSlave/: ModbusSlave.cpp  ModbusSlave.h
main/ui/: actions.h  fonts.h  images.c  images.h  screens.c  screens.h  structs.h  styles.c  styles.h  ui.c  ui.h  vars.h
main/ui/fonts/: ui_font_nunit_18.c  ui_font_nunito.c  ui_font_nunito_18.c  ui_font_nunito_18_2.c  ui_font_nunito_black_16.c  ui_font_nunito_black_18.c  ui_font_nunito_bold_18.c  ui_font_nunito_bold_25.c  ui_font_nunito_bold_46.c  ui_font_roboto_mono_bold_14.c  ui_font_roboto_mono_bold_20.c  ui_font_roboto_mono_bold_24.c  ui_font_roboto_mono_bold_25.c  ui_font_roboto_mono_bold_26.c  ui_font_roboto_mono_bold_30.c  ui_font_roboto_mono_bold_46.c  ui_font_roboto_mono_regular_16.c
main/ui/images/: ui_image_control_down.c  ui_image_control_left.c  ui_image_control_right.c  ui_image_control_up.c  ui_image_data.c  ui_image_data_power.c  ui_image_logo.c  ui_image_notation.c  ui_image_setting.c  ui_image_system.c
(+31 files in other folders)
